# Gallstone_Prediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  gallstone_final_project.ipynb  gallstone_project.ipynb  gallstone_project_new.ipynb  pyproject.toml
docs/: gallstone_final_project.ipynb
notebooks/: gallstone_final_project.ipynb
scripts/: run_notebook.py  smoke_check.py
src/gallstone_showcase/: __init__.py  model.py  paths.py  webapp.py
tests/: test_model.py  test_smoke_check.py
